--- a/assets/css/navigation.styl
+++ b/assets/css/navigation.styl
@@ -67,7 +67,8 @@
     top 50px
     left -246px
     z-index 400
-    overflow scroll
+    overflow-y scroll
+    text-overflow ellipsis
     border-right 5px solid #4E09A5
     background-image: -webkit-gradient(
       linear,
